Adicionando alteracoes entrada

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -16,7 +16,14 @@
         <li class="cadastrarEntrar separando"><a class="nunito-class" href="#">Cadastre-se</a></li>
     </ul>
 
-    <h1>Testando Versionamento</h1>
+    <div class="entrada">
+        <h1 style="line-height: 1px;">Bem-vindo ao Olimpo!</h1>
+        <h5>Tornado comunidades mais sustentáveis</h5>
+        <div class="btn1">
+            <p><a href="">Saiba Mais</a></p>
+        </div>
+        <img src="9d33fc2fded1bbfa0c6716fcd7f3df50.jpg" alt="">
+    </div>
     
 </body>
 </html>
