Adicionando página de serviços

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -10,20 +10,48 @@
     <!-- Menu -->
     <ul class="menu">
         <li><a class="nunito-class"    href="#">Sobre nós</a></li>
-        <li><a class="nunito-class"  href="#">Funcionalidades</a></li>
+        <li><a class="nunito-class"  href="#">Nossos serviços</a></li>
         <li><a  class="nunito-class" href="#">O que é?</a></li>
-        <li class="cadastrarEntrar"><a  class="nunito-class" href="#">Login</a></li>
-        <li class="cadastrarEntrar separando"><a class="nunito-class" href="#">Cadastre-se</a></li>
+        <li class="cadastrarEntrar"><a   href="#">Login</a></li>
+        <li class="cadastrarEntrar "><a  href="#">Cadastre-se</a></li>
     </ul>
 
     <div class="entrada">
         <h1 style="line-height: 1px;">Bem-vindo ao Olimpo!</h1>
         <h5>Tornado comunidades mais sustentáveis</h5>
-        <div class="btn1">
-            <p><a href="">Saiba Mais</a></p>
-        </div>
+        <button class="btn1"><a href="">Saiba Mais</a></button>
         <img src="9d33fc2fded1bbfa0c6716fcd7f3df50.jpg" alt="">
     </div>
+    <div class="oque">
+    </div>
+    <hr>
+    <section class="servicos">
+        <h1>Nossos Serviços</h1>
+        <div class="bloco">
+            <div class="icon">
+                <img src="chatimg.png" alt="">
+            </div>
+            <h3>Fóruns de discussão</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eum quae? Maiores quia quas ea nostrum iure, adipisci repudiandae doloremque!</p>
+            <button class="btn2">Saiba Mais</button>
+        </div>
+        <div class="bloco">
+            <div class="icon">
+                <img src="vendas.png" alt="">
+            </div>
+            <h3>Compra e venda</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eum quae? Maiores quia quas ea nostrum iure, adipisci repudiandae doloremque!</p>
+            <button class="btn2">Saiba Mais</button>
+        </div>
+        <div class="bloco">
+
+            <div class="icon"> 
+                <img src="Captura de tela 2024-07-20 123103.png" alt=""></div>
+            <h3>Rede Social</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, eum quae? Maiores quia quas ea nostrum iure, adipisci repudiandae doloremque!</p>
+            <button class="btn2">Saiba Mais</button>
+        </div>
+    </section>
     
 </body>
 </html>
