pagina de cadastro criada

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
             <li><a  class="nunito-class" href="">Quem somos?</a></li>
             <li><a  class="nunito-class" href="">Contate-nos</a></li>
             <li class="cadastrarEntrar"><a   href="#">Login</a></li>
-            <li class="cadastrarEntrar "><a  href="#">Cadastre-se</a></li>
+            <li class="cadastrarEntrar "><a  href="#"><a href="cadastro.html">Cadastre-se</a></a></li>
         </ul>
      </div>
   
