cadastro só que bonito
mudanças visuais no cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar-se</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
     <img src="LogoOlimpo.png" alt="" id="logo" width="200px">
 
-    <h1 id="titulo">Cadastre-se!</h1>
+    <h1 id="titulo"><strong>Cadastre-se!</strong></h1>
 
     <form action="#">
         <label for="nome" id="nome">
